@@ -204,6 +204,8 @@ Tools/Demos
 Build
 -----
 
+- Issues #4728 and #4060: WORDS_BIGEDIAN is now correct in Universal builds.
+
 - Issue #4389: Add icon to the uninstall entry in "add-and-remove-programs".
 
 - Issue #4289: Remove Cancel button from AdvancedDlg.
